deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: otus-microservices-hw1-deployment
spec:
    replicas: 3
    selector:
       matchLabels:
          app: otus-microservices-hw1-app
    template:
       metadata:
          labels:
             app: otus-microservices-hw1-app
       spec:
          containers:
          - name: otus-microservices-hw1
            image: olksndrbedenko/otus-microservices-hw1:v1.0.0
            ports:
              - name: web
                containerPort: 8000
            livenessProbe:
                httpGet:
                    port: 8000
                    path: /
                initialDelaySeconds: 10
                periodSeconds: 5
                timeoutSeconds: 2
            readinessProbe:
                httpGet:
                    port: 8000
                    path: /health/
                initialDelaySeconds: 10
                periodSeconds: 5
