service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otus-microservices-hw1-service
spec:
  selector:
    app: otus-microservices-hw1-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: web
  type: NodePort
