ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: otus-microservices-hw1-ingress
  spec:
    ingressClassName: nginx
    rules:
      - host: arch.homework
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: otus-microservices-hw1-service
                  port:
                    number: 8000
